--- a/eu-atollgroup-mifid-web/src/main/webapp/index.html
+++ b/eu-atollgroup-mifid-web/src/main/webapp/index.html
@@ -52,13 +52,16 @@
 <script src="app/app.js"></script>
 <!--CONTROLLERS-->
 <script src="app/controllers/QuestionnaireCtrl.js"></script>
+<script src="app/controllers/ProductCtrl.js"></script>
 <script src="app/controllers/AlertMessagesCtrl.js"></script>
 <script src="app/controllers/PopoverDemoCtrl.js"></script>
 <!--DIRECTIVES-->
 <script src="app/directives/QuestionnaireNameValidator.js"></script>
+<script src="app/directives/ProductNameValidator.js"></script>
 <script src="app/directives/AnswerScoreValidator.js"></script>
 <!--SERVICES-->
 <script src="app/services/QuestionnairesService.js"></script>
+<script src="app/services/ProductsService.js"></script>
 <!--jQuery-->
 <script src="tools/jQuery/jquery-1.12.2.min.js" type="text/javascript"></script>
 <!--BootStrap-->
